[tool.poetry]
name = "toapi"
version = "2.1.3"
description = "Every web site provides APIs."
authors = ["Elliot Gao <gaojiuli@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
cchardet = "^2.1.7"
htmlparsing = "^0.1.5"
requests = "^2.25.1"
htmlfetcher = "^0.0.6"
flask = "^2.0.1"
click = "^8.0.1"
cssselect = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mkdocs = "^1.2.1"
pytest-pep8 = "^1.0.6"
pytest-cov = "^2.12.1"
webtest = "^2.0.35"
codecov = "^2.1.11"
mkdocs-material = "^7.1.9"
ujson = "^4.0.2"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
toapi="toapi.cli:cli"

[tool.poetry.urls]
"homepage" = "https://github.com/gaojiuli/toapi"
"repository" = "https://github.com/gaojiuli/toapi"
"documentation" = "https://gaojiuli.github.io/toapi/"



[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 79
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
no_lines_before = "LOCALFOLDER"
