[project]
name = "toapi"
version = "2.2.1"
description = "Every web site provides APIs."
authors = [{ name = "Elliot Gao", email = "gaojiuli@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "charset-normalizer>=3.3",
    "htmlparsing>=0.1.5",
    "requests>=2.32",
    "htmlfetcher>=0.0.6",
    "flask>=3.0",
    "click>=8.1",
    "cssselect>=1.2",
]

[project.scripts]
toapi = "toapi.cli:cli"

[project.urls]
homepage = "https://github.com/gaojiuli/toapi"
repository = "https://github.com/gaojiuli/toapi"
documentation = "https://gaojiuli.github.io/toapi/"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "webtest>=3.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pre-commit>=3.7",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["toapi"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017"]

[tool.pytest.ini_options]
testpaths = ["tests"]
